styles/styles.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v8.4.14,
* Autoprefixer: v10.4.7
* Browsers: last 4 version
*/

@font-face {
  font-family: "PT Sans";
  font-style: normal;
  font-weight: 400;
  src: url("../fonts/ptsans-400.woff2");
  font-display: swap;
}

@font-face {
  font-family: "PT Sans";
  font-style: normal;
  font-weight: 700;
  src: url("../fonts/ptsans-700.woff2");
  font-display: swap;
}

/* Pages */
html {
  margin-left: auto;
  margin-right: auto;
  background-color: rgb(242, 242, 242);
}

body {
  font-family: "PT Sans", "Arial", sans-serif;
  width: 1200px;
  min-height: 100vh;
  margin: 0 auto;
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  font-style: normal;
  color: #333333;
  background-color: #f2f2f2;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
  padding: 0 40px;
}

.wrapper {
  background-color: #ffffff;
}

.page-header {
  position: relative;
  background-color: rgb(255, 255, 255);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-wrap: wrap;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 64px;
}

h2,
h3 {
  text-transform: uppercase;
  font-family: PT Sans;
  font-weight: 700;
  font-size: 24px;
  line-height: 28px;
  text-align: center;
  margin: 0;
  padding: 0;
}

li {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

ul {
  padding: 0;
  margin: 0;
}

a {
  text-decoration: none;
  color: #ffffff;
  margin: 0;
}

p,
fieldset {
  margin: 0;
  padding: 0;
}

label,
input {
  cursor: pointer;
}

.navigation {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.navigation-logo {
  position: absolute;
  left: 70px;
  top: 0;
}

.navigation-list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-wrap: wrap;
  margin-left: 238px;
}

.navigation-link {
  font-family: "PT Sans", sans-serif;
  font-size: 20px;
  font-weight: 700;
  line-height: 24px;
  color: #000000;
  text-decoration: none;
  margin: 20px 16px 0 16px;
  padding-bottom: 20px;
}

.navigation-link:hover {
  opacity: 0.5;
  transition: 0.3s;
}

.navigation-link-active {
  border-bottom: solid 2px #756257;
}

.navigation-user {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-wrap: wrap;
  margin-left: 285px;
}

.navigation-user-item {
  position: relative;
}

.likes-ammount {
  padding: 5px;
  background-color: #7db54f;
  color: #ffffff;
  border-radius: 50%;
  font-family: PT Sans;
  font-weight: 400;
  font-size: 10px;
  line-height: 10px;
  text-align: center;
  position: absolute;
  bottom: 15px;
  left: 25px;
}

.navigation-button {
  color: #ffffff;
  background-color: #756157;
  text-transform: uppercase;
  text-align: center;
  border-radius: 4px;
  text-transform: uppercase;
  padding: 8px 34px;
  margin-left: 20px;
  font-family: PT Sans;
  font-weight: 700;
  font-size: 16px;
  line-height: 20px;
  letter-spacing: 0%;
  text-align: center;
  vertical-align: middle;
  text-transform: uppercase;
}

.navigation-button:hover {
  background-color: #615048;
}
.navigation-button:focus {
  background-color: #615048;
}
.navigation-button:active {
  background-color: #756157;
  color: rgba(255, 255, 255, 0.3);
}

.navigation-logo {
  display: block;
  width: 140px;
  height: 70px;
}

.hero {
  background-image: url("../images/devider.svg"),
    url("../images/index-background.jpg");
  background-repeat: no-repeat;
  background-size: 100% auto, 1200px 485px;
  background-position: left bottom, left top;
  padding: 51px 371px 0;
}
.hero-image {
  padding-bottom: 78px;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.advantages-title-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-wrap: wrap;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 64px 274px;
  text-align: center;
  background-color: #ffffff;
}

.advantages-title {
  font-family: PT Sans;
  font-weight: 700;
  font-size: 30px;
  line-height: 36px;
  text-align: center;
  text-transform: uppercase;
  color: #000000;
  margin-bottom: 20px;
}

.advantages-text {
  font-family: PT Sans;
  font-weight: 400;
  font-size: 22px;
  line-height: 26px;
  text-align: center;
}

.advantages-item-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  flex-wrap: wrap;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 102px 85px;
  text-align: center;
  color: #ffffff;
  background-color: #82b3d3;
  position: relative;
}

.advantages-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.advantages-item-small {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  flex-wrap: wrap;
  text-align: center;
  width: 400px;
  padding: 0 85px;
  height: 385px;
  justify-content: center;
  position: relative;
}

.advantages-item-lead {
  font-family: PT Sans;
  font-weight: 700;
  font-size: 24px;
  line-height: 28px;
  text-align: center;
  text-transform: uppercase;
}
/* ... */

